<resources>
    <string name="app_name">K12NET Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="loading">Loading...</string>
    <string name="assessment_result">Assessment Result</string>
    <string name="achievement_guide">Achievement Guide</string>
    <string name="absence">Absence</string>
    <string name="homeworks">Homeworks</string>
    <string name="courses">Courses</string>
    <string name="announcement">Announcement</string>
    <string name="example">Example</string>
    <string name="showAll">Show All</string>
    <string name="complete">Complete</string>
	<string name="incomplete">Incomplete</string>
	<string name="partial">Partial</string>
	<string name="active">Active</string>
	<string name="mail">Messages</string>
	<string name="details">Details</string>
	<string name="loading_please_wait">Loading, Please Wait...</string>
	<string name="blank">Blank</string>
	<string name="student_list">Student List</string>
	<string name="grade">Grade</string>
	<string name="appName">K12NET Mobile</string>
	<string name="unknown">Unknown</string>
	<string name="passive">Passive</string>
	<string name="title">Title</string>
	<string name="startDate">Start Date</string>
	<string name="endDate">Due Date</string>
	<string name="status">Status</string>
	<string name="teacher">Teacher</string>
	<string name="description">Description</string>
	<string name="attachment">Attachment</string>
	<string name="noItem">There is no item</string>
	<string name="noHomework">There is no homework</string>
	<string name="hw_stat_complete">Complete</string>
	<string name="hw_stat_partial">Partial</string>
	<string name="hw_stat_notComplete">Not Complete</string>
	<string name="hw_stat_noReturn">No Return</string>
	<string name="hw_stat_stuAbsent">Stu. Absent</string>
	<string name="hw_stat_late">Late</string>
	<string name="hw_stat_unknown">Unknown</string>
	<string name="hw_stat_active">Active</string>
	<string name="noAnnouncement">There is no announcement</string>
	<string name="sender">Sender</string>
	<string name="noMail">There is no mail</string>
	<string name="sendDate">Send Date</string>
	<string name="replyMessageHint">Reply</string>
	<string name="writeMessageHint">Write your message</string>
	<string name="sendMessageHint">Send</string>
	<string name="deleteMessageHint">Delete</string>
	<string name="unreadMessageHint">Unread</string>
	<string name="shortDateFormat">MMMM dd</string>
	<string name="longDateFormat">MMMM dd, yyyy</string>
	<string name="fullDateFormat">EEEE, MMMM dd, yyyy</string>
	<string name="noAssessment">There is no assessment information</string>
	<string name="getMoreResult">Get More Result</string>
	<string name="messageType">Message Type</string>
	<string name="noConnection">There is no internet connection</string>
	<string name="noAchievement">There is no achievement information</string>
	<string name="rememberMe">Remember Me</string>
	<string name="section">Section</string>
	<string name="noSection">There is no section information</string>
	<string name="success">Success</string>
	<string name="monday">Monday</string>
	<string name="tuesday">Tuesday</string>
	<string name="wednesday">Wednesday</string>
	<string name="thursday">Thursday</string>
	<string name="friday">Friday</string>
	<string name="saturday">Saturday</string>
	<string name="sunday">Sunday</string>
    <string name="results">Results</string>
    <string name="reports">Reports</string>
    <string name="assessment">Assessment</string>
    <string name="noSelection">Please select an assessment</string>
    <string name="date">Date</string>
    <string name="loginError">Login error, Please check username, password and network connection settings and try again.</string>
    <string name="appServerUrl">Application Server URL</string>
    <string name="fileServerUrl">File Server URL</string>
    <string name="save">Save</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="notAnswered">Not Answered</string>
    <string name="correctScorePercentage">%Correct</string>
    <string name="maxPossibleScore">Total</string>
    <string name="back">Back</string>
    <string name="createReport">Create Report</string>
    <string name="create">Create</string>
    <string name="assessmentNoSelected">Assessment should be selected</string>
    <string name="formNoSelected">Assessment form should be selected</string>
    <string name="courseName">Course</string>
    <string name="sectionName">Section</string>
    <string name="weeklyHour">Weekly Hour</string>
    <string name="login_failed">Login failed, please try again after checking username, password and connection settings</string>
    <string name="progress">Progress</string>
    <string name="score_card">Score Card</string>
    <string name="term_marks">Term Marks</string>
    <string name="fullDateTimeFormat">EEEE, MMMM dd, yyyy hh:mm:ss</string>
    <string name="sms">SMS</string>
    <string name="asisto_mail">Screen Message</string>
    <string name="receive_message">Asisto has a new message</string>
    <string name="receive_homework">Asisto has new homework information</string>
    <string name="receive_announcement">Asisto has new announcement</string>
    <string name="receive_assessment">Asisto has new assessment information</string>
    <string name="receive_achievement_guide">Asisto has new achiecement guide information</string>
    <string name="receive_section">Asisto has new section information</string>
    <string name="receive_error">Received data is contain some error</string>
    <string name="section_scores">Section Scores</string>
    <string name="gcm_register_ok">Notification register is completed successfully.</string>
    <string name="message_send_ok">Message is sent successfully</string>
    <string name="message_send_fail">Sending message is failed</string>
    <string name="noData">No data</string>
    <string name="login_name_school_database_fail">Name or School info can not be read from database</string>
    <string name="noNetwork">Network connection is not found</string>
    <string name="submitMessageFail">Submit message is failed</string>
    <string name="setUnread">Message is set as Unread</string>
    <string name="messageDeleted">Message is deleted</string>
    <string name="homeworkSubmitFailed">Homework submit is failed.</string>
    <string name="assessment_report_failed">Assessment report can not be start</string>
    <string name="assessment_report_ok">Assessment report is started successfully</string>
    <string name="error_gcm_installplayservices">Please install google play services to get notifications</string>
    <string name="error_gcm_devicenotsupported">Your device is not supported to get notification</string>
    <string name="noAttendance">There is no attendance</string>
    <string name="attendance">Attendance</string>
    <string name="sentByAsisto">Sent by Asisto ...</string>
    <string name="calendar">Calendar</string>
    <string name="logout">Log Out</string>
    <string name="noCalendarInfo">There is no calendar information</string>
    <string name="total">Total</string>
    <string name="microDateTimeFormat">MMM dd</string>
    <string name="noCalenderItem">There is no calendar record for this day</string>
    <string name="daily">Daily</string>
    <string name="period">Period</string>
    <string name="noAttendanceInMonth">There is no attendance record for this month</string>
    <string name="calendarAssignmentType">Ödev</string>
    <string name="startingDate">Start Date</string>
    <string name="startingTime">Start Time</string>
    <string name="location">Location</string>
    <string name="eventType">Event Type</string>
    <string name="endingDate">End Date</string>
    <string name="endingTime">End Time</string>
    <string name="logoutWarningMessage">Your session will be closed. Are you sure ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="localString">en</string>
    <string name="webViewer">Asisto Web Viewer</string>
    <string name="videoDershane">Video Dershane</string>
    <string name="videoDersler">Video Dersler</string>
    <string name="assessment_type">Assessment Name</string>
    <string name="grading_assignment_type">Grading Assignment Type</string>
    <string name="publish_date">Publish Date</string>
    <string name="assesment_date">Assessment Date</string>
    <string name="max_score">Max Score</string>
    <string name="weight">Weight</string>
    <string name="form">Form</string>
    <string name="application">Administration</string>
    <string name="classroom">Room Number</string>
    <string name="observer">Staff</string>
    <string name="duration">Duration</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="tutoring">Tutoring</string>
    <string name="term">Term</string>
    <string name="remindMe">Remind Later</string>
    <string name="calendarPermissionMessage">Calendar data will be sync your device. Do you want to continue ?</string>
    <string name="calendarSyncStart">Calendar sync is start</string>
    <string name="calendarSyncEnd">Calendar sync is end</string>
    <string name="asisto_calendar">Asisto\'s Calendar</string>
    <string name="download_file">Downloading file. Please wait...</string>
    <string name="download_location">Download location</string>
    <string name="clubs">Clubs</string>
    <string name="noRoleDefined">No Role Defined</string>
    <string name="activeDate">Active Date</string>
    <string name="role">Role</string>
    <string name="participationComment">Comment</string>
    <string name="duplicateSARequest">Duplicate Student Activity Request exists. Please select onlt one value for each selection.</string>
    <string name="selectOne">Select One</string>
    <string name="SARequestFail">Student Activity Request has not been saved.</string>
    <string name="SARequestSuccess">Student Acitivity Request has been saved successfully.</string>
    <string name="newClubRequest">New Club Request</string>
    <string name="noActiveClub">There is no active student activity participation.</string>
    <string name="touchToRequest">Touch to request student activity participation.</string>
    <string name="downloadFailed">Download operation has been failed.</string>
    <string name="saMandatoryNotSatisfied">Least %d value should be selected.</string>
    <string name="studentActivityDetail">Student Activity Details</string>
    <string name="attendanceInfo">Attendance Info</string>
    <string name="noStudentActivityParticipation">There is no active student activity participation.</string>
    <string name="sendNewStudentActivityRequest">Touch to request student activity participation.</string>
    <string name="noParticipationComment">No Participant Comment</string>
    <string name="noActivityDescription">Activity description is not available.</string>
    <string name="attendanceName">Attendance Name</string>
    <string name="enterExit">Time In/Time Out</string>
    <string name="value">Absence Value</string>
    <string name="typeStatus">Type/Status</string>
    <string name="name">Name</string>
    <string name="activityTypeLevel">Activity Type/Level</string>
    <string name="programType">Curricular Type</string>
    <string name="gradeLevel">Grade Levels</string>
    <string name="locationType">Location Type</string>
    <string name="documentStartToDownload">Preparing to document display</string>
    <string name="applications">Applications</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
</resources>