<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background_repeat">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/img_login_icon"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:src="@drawable/k12net_logo" />

        <com.k12nt.k12netframe.component.AsistoTextView
            android:id="@+id/lbl_login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/action_settings"
            android:textAppearance="@style/Asisto_BigLabelWhite"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txt_connection_address"
            style="@style/Asisto_TextBox"
            android:hint="@string/appServerUrl"
            android:inputType="textNoSuggestions"
            android:text="okul.k12net.com" />

        <EditText
            android:id="@+id/txt_fs_address"
            style="@style/Asisto_TextBox"
            android:hint="@string/fileServerUrl"
            android:inputType="textNoSuggestions"
            android:text="fs.k12net.com/FS/"
            android:visibility="gone" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:gravity="center"
            android:visibility="gone">

            <com.k12nt.k12netframe.component.AsistoTextView
                android:id="@+id/txt_language_en"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english"
                android:textAppearance="@style/Asisto_MediumLabel"
                android:layout_centerInParent="true" />

            <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar_language"
                android:progress="1"
                android:max="1"
                android:layout_weight="0.1" />

            <com.k12nt.k12netframe.component.AsistoTextView
                android:id="@+id/txt_language_ar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arabic"
                android:textAppearance="@style/Asisto_MediumLabel"
                android:layout_centerInParent="true" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/Asisto_Button"
            android:gravity="center"
            android:text="@string/save"
            android:layout_marginTop="5dp" />

    </LinearLayout>

</RelativeLayout>