

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/login_background_repeat"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_login_icon"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="12dp"
                android:src="@drawable/k12net_logo"
                android:cropToPadding="false"
                android:adjustViewBounds="false" />

            <com.atlas.k12netframe.component.AsistoTextView
                android:id="@+id/lbl_login_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome"
                android:textAppearance="@style/Asisto_BigLabelWhite"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_login_username"
                style="@style/Asisto_TextBox"
                android:hint="@string/username"
                android:inputType="textNoSuggestions">

            </EditText>

            <EditText
                android:id="@+id/txt_login_password"
                style="@style/Asisto_TextBox"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <CheckBox
                    android:id="@+id/chk_remember_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/rememberMe"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:textAppearance="@style/Asisto_ButtonLabel"
                    android:textColor="#ffffff"
                    android:checked="false" />

                <Button
                    android:id="@+id/btn_settings"
                    style="@style/Asisto_ButtonBorderless"
                    android:gravity="center"
                    android:text="@string/action_settings"
                    android:layout_width="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_login_submit"
                style="@style/Asisto_Button"
                android:gravity="center"
                android:text="@string/login" />

        </LinearLayout>
    </ScrollView>